fixes table alignment

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ h1, h2, h3, h4, h5, h6 {
 
 table, .modal-content {
 	text-transform: capitalize;
+}
+
+.modal-content {
 	text-align: center;
 }
 
